# lox-rust

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  ast_dump.rs  diagnostics.rs  log.rs  main.rs  parse.rs  render.rs  scan.rs  tokens.rs
src/lex/: mod.rs  scan.rs
src/lex/scan/: mod.rs  tests.rs
src/parse/: exprs.rs  mod.rs  stmts.rs
src/spans/: mod.rs  render.rs
src/symbols/: display.rs  mod.rs  render.rs  tests.rs
src/tokens/: display.rs  mod.rs  render.rs
