[package]
name = "lox"
version = "0.1.0"
edition = "2024"
description = "Lox implementation in Rust"
repository = "https://github.com/krobbi/lox-rust"
license = "MIT"
keywords = ["crafting-interpreters", "interpreter", "lox"]
categories = ["command-line-utilities", "compilers"]
publish = false

[dependencies]

[lints.rust]
ambiguous_negative_literals = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "forbid"
meta_variable_misuse = "warn"
non_ascii_idents = "forbid"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unknown_lints = "forbid"
unnameable_types = "warn"
# unqualified_local_imports = "warn" # https://github.com/rust-lang/rust/issues/138299
unsafe_attr_outside_unsafe = "forbid"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unstable_features = "forbid"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
doc_paragraphs_missing_punctuation = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
field_scoped_visibility_modifiers = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
iter_over_hash_type = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_assert_message = "warn"
module_name_repetitions = "warn"
panic = "warn"
partial_pub_fields = "warn"
precedence_bits = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_unrelated = "warn"
single_char_lifetime_names = "warn"
string_slice = "warn"
tests_outside_test_module = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
